project detail margin top on mobile fixed

--- a/src/components/Project_Detail/project_detail.css
+++ b/src/components/Project_Detail/project_detail.css
@@ -377,7 +377,9 @@
         margin: 2rem auto;
         padding-bottom: 2rem;
     }
-
+    .--margin-top{
+        margin-top: 16rem;
+    }
     .project_details_subheading {
         font-size: 3.5rem;
     }
@@ -422,7 +424,9 @@
         outline: 0.35rem solid #f8f8f8;
         outline-offset: -8px;
     } 
-    
+    .--margin-top{
+        margin-top: 16rem;
+    }
     .project_details_flex_col:nth-of-type(2) {
         margin-top: 1rem;
     }
@@ -475,7 +479,9 @@
         outline: 0.35rem solid #f8f8f8;
         outline-offset: -8px;
     }
-
+    .--margin-top{
+        margin-top: 16rem;
+    }
     .project_details_text_wrapper {
         width: 90%;
         max-width: none;
